@@ -99,7 +99,7 @@ public class GtnWsIfpSaveService {
 	}
 
 	private HelperTable getHelperTable(Integer systemId, Session session) {
-		return session.load(HelperTable.class, systemId == null ? new Integer(0) : systemId);
+		return session.load(HelperTable.class, systemId == null ? Integer.valueOf(0) : systemId);
 	}
 
 	public void updateCfpQuery(GtnIFamilyPlanBean bean) throws GtnFrameworkGeneralException {
